--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,6 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-
-    <link href='//fonts.googleapis.com/css?family=Lora:400' rel='stylesheet' type='text/css'><script src="//s3-ap-northeast-1.amazonaws.com/justfont-user-script/jf-34677.js"></script>
   </head>
 
   <body>
@@ -22,8 +20,8 @@
           <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
           <div class="site-info">
-            <h1 class="site-name hanamin"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description hanamin">{{ site.description }}</p>
+            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+            <p class="site-description">{{ site.description }}</p>
           </div>
 
           <nav>
