--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,6 +15,11 @@ $lightGray: #e8e8e8;
 $white: #fff;
 
 
+$c1: #9d8189;
+$c2: #847577;
+$c3: #a6a2a2;
+$c4: #e5e6e4;
+$c5: #b5838d;
 
 // Font stacks
 @font-face {
@@ -33,14 +38,14 @@ $white: #fff;
   font-weight: 400;
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
-$font-default: "Avenir Next", Arial, "Lantinghei SC", "Hiragino Sans GB", sans-serif;
-$font-title: "Josefin Sans", $font-default;
-$font-content: "Quattrocento", $font-default;
+
+$font-sans-serif: "Avenir Next", Arial, "Lantinghei SC", "Hiragino Sans GB", sans-serif;
 $font-serif: Palatino, Garamond, Georgia, "STSong", "SimSun", serif;
 $font-mono: "Avenir Next", 'Lucida Grande', Tahoma, Verdana, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$georgia: Georgia, serif;
-
+//$font-default: "Avenir Next", Arial, "Lantinghei SC", "Hiragino Sans GB", sans-serif;
+$font-title: "Josefin Sans", $font-sans-serif;
+$font-content: "Quattrocento", $font-serif;
 
 $em-base: 18px !default;
 // px to em
