--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -13,8 +13,9 @@
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
   background-color: $c4;
-  color: $c1;
+  color: #6f6f6f;
   border-radius: 1px;
+  padding: 0 2px;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
