--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,11 +7,11 @@
 $blue: #4183C4;
 
 // Grays
-$black: #000;
-$darkerGray: #2a282b;
-$darkGray: #3b3b3b;
-$gray: #6f6f6f;
-$lightGray: #e8e8e8;
+$black: #2a282b;
+// $darkerGray: #2a282b;
+// $darkGray: #3b3b3b;
+// $gray: #6f6f6f;
+// $lightGray: #e8e8e8;
 $white: #fff;
 
 
