--- a/style.scss
+++ b/style.scss
@@ -145,11 +145,11 @@ img {
 
 // Specify the color of the selection
 ::-moz-selection {
-  color: $c1;
+  color: $black;
   background: $c4;
 }
 ::selection {
-  color: $c1;
+  color: $black;
   background: $c4;
 }
 
