--- a/style.scss
+++ b/style.scss
@@ -137,9 +137,7 @@ img {
 }
 
 .tag {
-  //font-size: em(16px);
-  //color: inherit;
-  //border-bottom-color: currentColor !important;
+  border-bottom: 1px solid rgba($c5,0.92);
 }
 
 // Specify the color of the selection
