--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -13,7 +13,7 @@
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
   background-color: $c4;
-  color: #6f6f6f;
+  color: rgba(36,37,54,0.85);
   border-radius: 1px;
   padding: 0 2px;
 }
