--- a/style.scss
+++ b/style.scss
@@ -75,16 +75,22 @@ h3 {
   font-size: em(20px);
 }
 
-h4 {
+h4, h5 {
   font-size: em(18px);
   color: $c2;
 }
+
 h5 {
+  margin-top: 1em;
+}
+
+h6 {
   margin-bottom: 0px;
   font-size: em(16px);
   letter-spacing: 1px;
   color: $c2;
 }
+
 p {
   margin: 15px 0;
 }
