--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -38,10 +38,18 @@ $c5: #b5838d;
   font-weight: 400;
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
+@font-face {
+  font-family: 'Anonymous Pro';
+  src: local('Anonymous Pro'),
+       url(/fonts/anonymouspro.woff) format('woff');
+  font-style: normal;
+  font-weight: 400;
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
 
 $font-sans-serif: "Avenir Next", Arial, "Lantinghei SC", "Hiragino Sans GB", "Microsoft Yahei", "WenQuanYi Micro Hei", sans-serif;
 $font-serif: Palatino, Garamond, Georgia, "STSong", "SimSun", "AR PL UMing CN", serif;
-$font-mono: "Avenir Next", 'Lucida Grande', Tahoma, Verdana, Arial, sans-serif;
+$font-mono: "Anonymous Pro","Bitstream Vera Sans Mono",Consolas,"Lucida Grande",Verdana,"Hiragino Sans GB","Microsoft Yahei","WenQuanYi Micro Hei",monospace;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 //$font-default: "Avenir Next", Arial, "Lantinghei SC", "Hiragino Sans GB", sans-serif;
 $font-title: "Josefin Sans", $font-sans-serif;
