--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,7 +4,7 @@
 //
 
 // Colors
-$blue: #4183C4;
+//$blue: #4183C4;
 
 // Grays
 $black: #2a282b;
@@ -17,7 +17,7 @@ $white: #fff;
 
 $c1: #9d8189;
 $c2: #847577;
-//$c3: #a6a2a2;
+$c3: #f0e6ef;
 $c4: #e5e6e4;
 $c5: #b5838d;
 
