--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -9,21 +9,21 @@
 
 code {
   font-family: "Anonymous Pro","Bitstream Vera Sans Mono",Consolas, monospace;
-  background-color: $c3;
+  font-size: em(15.51px);
+  background-color: rgba($c3,0.44);
   color: #65334d;
   border-radius: 1px;
   margin: 0 2px;
-  padding: 0 2px;
+  padding: em(0.704,15.6) em(2,15.6) em(1,15.6) em(3,15.6);
 }
 
 pre {
   white-space: pre-wrap;
   word-wrap: break-word;
+  line-height: 1.41;
 
   code {
     background: transparent;
-    font-size: em(15.6px);
-    line-height: 1.41;
   }
 
 }
