--- a/style.scss
+++ b/style.scss
@@ -81,7 +81,18 @@ h4, h5 {
 
 h4 {
   font-weight: 600;
-  letter-spacing: 2px;
+  letter-spacing: em(1.21, 16.9);
+  padding: 0 em(14.9, 16.9);
+  position: relative;
+
+  &:after {
+    content: '';
+    height: 56%;
+    width: 2px;
+    background-color: currentColor;
+    position: absolute;
+    top: 22%; left: 0;
+  }
 }
 
 h5 {
@@ -411,6 +422,7 @@ footer {
 // added style
 //
 //
+
 sup {
   position: relative;
   font-size: 0.798em;
@@ -446,7 +458,7 @@ figcaption {
 }
 
 table {
-
+  font-size: em(15.51px);
 }
 tr {
   background-color: $white;
@@ -457,7 +469,6 @@ th, td {
   border: 1px solid $c4;
 }
 td {
-  font-size: em(15.51px);
   line-height: 1.42857;
   vertical-align: middle;
 }
