--- a/style.scss
+++ b/style.scss
@@ -502,7 +502,13 @@ tbody {
 
 .pagination {
   font-family: $font-title;
-  padding: 1em 0;
+  margin-top: 25.696px;
+
+  article + & {
+    border-top: 1px solid $c4;
+    margin-top: em(50px);
+    padding-top: em(32.696);
+  }
 
   .previous, .next {
     width: 50%;
