--- a/style.scss
+++ b/style.scss
@@ -53,6 +53,10 @@ h1, h2, h3, h4, h5, h6 {
   @include mobile {
     line-height: 1.4;
   }
+
+  #main > .post & {
+    margin: 1.618em 0 1em;
+  }
 }
 
 h1, h2, h3 {
