--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,10 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+
+    {% if page.use_math %}
+      {% include mathjax_support.html %}
+    {% endif %}
   </head>
 
   <body>
