--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -16,7 +16,7 @@ code {
   color: #65334d;
   border-radius: 1px;
   margin: 0 2px;
-  padding: em(1.704,15.6) em(3,15.6) em(2,15.6) em(4,15.6);
+  padding: em(1.704,15.6) em(3.6,15.6) em(2,15.6) em(4.4,15.6);
 }
 
 pre {
@@ -64,7 +64,7 @@ pre {
 .highlight .ld { color: #93A1A1 } /* Literal.Date */
 .highlight .m { color: #2AA198 } /* Literal.Number */
 .highlight .s { color: #2AA198 } /* Literal.String */
-.highlight .na { color: #93A1A1 } /* Name.Attribute */
+.highlight .na { color: #5fc3c3 } // #93A1A1 } /* Name.Attribute */
 .highlight .nb { color: #B58900 } /* Name.Builtin */
 .highlight .nc { color: #268BD2 } /* Name.Class */
 .highlight .no { color: #CB4B16 } /* Name.Constant */
